<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/taxes_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:text="@string/taxes_details_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taxes_details_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:text="@string/taxes_details_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taxes_details_title" />

    <TextView
        android:id="@+id/taxes_details_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:text="@string/taxes_details_name"
        app:layout_constraintEnd_toEndOf="@id/taxes_details_title"
        app:layout_constraintStart_toEndOf="@id/taxes_details_name"
        app:layout_constraintTop_toBottomOf="@id/taxes_details_title" />

    <TextView
        android:id="@+id/taxes_details_executors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:layout_marginTop="16dp"
        android:text="@string/taxes_details_executors"
        app:layout_constraintEnd_toEndOf="@id/taxes_details_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/taxes_details_title"
        app:layout_constraintTop_toBottomOf="@id/taxes_details_payment" />

    <Button
        android:id="@+id/close_details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:background="@drawable/button_border"
        android:text="@string/close"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taxes_details_executors" />

</androidx.constraintlayout.widget.ConstraintLayout>