<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hackathonwinnersapp.presentation.ui.countTaxes.CountTaxesFragment">

    <TextView
        android:id="@+id/count_taxes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:text="@string/count_taxes_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_taxes_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:text="@string/taxes_details_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/count_taxes_title" />

    <Spinner
        android:id="@+id/count_taxes_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        app:layout_constraintBottom_toBottomOf="@id/count_taxes_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/count_taxes_name"
        app:layout_constraintTop_toTopOf="@id/count_taxes_name" />

    <Button
        android:id="@+id/add_taxes_button"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:background="@drawable/button_border"
        android:text="@string/plus"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/count_taxes_spinner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/count_taxes_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/size_16dp"
        app:layout_constraintBottom_toTopOf="@id/cancel_taxes_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_taxes_button" />

    <Button
        android:id="@+id/save_taxes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:background="@drawable/button_border"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_taxes_button" />

    <Button
        android:id="@+id/cancel_taxes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:background="@drawable/button_border"
        android:text="@string/order_dialog_cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>