<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:text="@string/order_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/order_title_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height_50"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:prefixTextAppearance="@style/InputTextAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/order_title_et"
            style="@style/InputTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:hint="@string/order_dialog_name_title"
            android:inputType="text"
            android:maxLength="@dimen/max_length_7"
            android:paddingTop="@dimen/size_8dp"
            android:textSize="@dimen/size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/order_cost_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height_50"
        app:layout_constraintEnd_toEndOf="@id/order_title_til"
        app:layout_constraintStart_toStartOf="@id/order_title_til"
        app:layout_constraintTop_toBottomOf="@id/order_title_til"
        app:prefixTextAppearance="@style/InputTextAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/order_cost_et"
            style="@style/InputTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/order_dialog_cost_title"
            android:inputType="text"
            android:maxLength="@dimen/max_length_7"
            android:paddingTop="@dimen/size_8dp"
            android:textSize="@dimen/size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/order_add_button"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_16dp"
        android:background="@drawable/button_border"
        android:text="@string/order_dialog_add"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/order_cancel_button"
        app:layout_constraintTop_toTopOf="@id/order_cancel_button" />

    <Button
        android:id="@+id/order_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8dp"
        android:background="@drawable/button_border"
        android:text="@string/order_dialog_cancel"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/order_cost_til"
        app:layout_constraintTop_toBottomOf="@id/order_cost_til" />
</androidx.constraintlayout.widget.ConstraintLayout>